--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "react-dom": "^18.3.1"
   },
   "devDependencies": {
+    "@types/react": "^18.3.3",
+    "@types/react-dom": "^18.3.0",
     "@tailwindcss/typography": "^0.5.10",
     "@types/node": "^20.11.0",
     "autoprefixer": "^10.4.17",
