--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,5 @@
 NEXT_PUBLIC_SITE_URL=http://localhost:3000
 # NEXT_PUBLIC_ANALYTICS_ID=
 
+# Optional: page size for blog pagination (server-side only)
+# BLOG_POSTS_PER_PAGE=10
