--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@ out/
 
 # Builds
 dist/
+tsconfig.tsbuildinfo
 
 # Env
 .env
@@ -24,4 +25,3 @@ pnpm-debug.log*
 .idea/
 .vscode/*
 !.vscode/extensions.json
-
