--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "engines": {
     "node": ">=20"
   },
-  "packageManager": "pnpm@9",
+  "packageManager": "pnpm@10.15.1",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -15,29 +15,37 @@
     "lint": "next lint",
     "typecheck": "tsc --noEmit",
     "format": "prettier -w .",
-    "test": "node -e \"console.log('ok')\""
+    "test": "vitest run --reporter=dot",
+    "test:watch": "vitest"
   },
   "dependencies": {
+    "gray-matter": "^4.0.3",
     "next": "^14.2.5",
+    "next-mdx-remote": "^5.0.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "gray-matter": "^4.0.3",
-    "next-mdx-remote": "^5.0.0",
     "rehype-autolink-headings": "^7.1.0",
+    "rehype-pretty-code": "^0.14.1",
     "rehype-slug": "^6.0.0",
-    "remark-gfm": "^4.0.0"
+    "remark-gfm": "^4.0.0",
+    "shiki": "^3.12.1"
   },
   "devDependencies": {
+    "@tailwindcss/typography": "^0.5.10",
+    "@testing-library/jest-dom": "^6.4.2",
+    "@testing-library/react": "^14.3.1",
+    "@testing-library/user-event": "^14.5.2",
+    "@types/node": "^20.11.0",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
-    "@tailwindcss/typography": "^0.5.10",
-    "@types/node": "^20.11.0",
     "autoprefixer": "^10.4.17",
     "eslint": "^8.57.0",
     "eslint-config-next": "^14.2.5",
+    "jsdom": "^24.1.0",
     "postcss": "^8.4.31",
     "prettier": "^3.2.5",
     "tailwindcss": "^3.4.7",
-    "typescript": "^5.4.0"
+    "typescript": "^5.4.0",
+    "vitest": "^1.6.0"
   }
 }
