--- a/.env.example
+++ b/.env.example
@@ -3,3 +3,6 @@ NEXT_PUBLIC_SITE_URL=http://localhost:3000
 
 # Optional: page size for blog pagination (server-side only)
 # BLOG_POSTS_PER_PAGE=10
+
+# Optional: disallow indexing in robots.txt (set to 1 for prep/staging)
+# DISALLOW_ROBOTS=0
