--- a/docker-compose.prep.yml
+++ b/docker-compose.prep.yml
@@ -2,15 +2,13 @@ version: "3.9"
 
 services:
   app:
-    build:
-      context: .
-      dockerfile: Dockerfile
-    image: puttski/prep-web:local
+    image: ghcr.io/puttrix/puttski-web:prep-latest
+    pull_policy: always
     restart: unless-stopped
     environment:
       NODE_ENV: production
-      NEXT_PUBLIC_SITE_URL: ${NEXT_PUBLIC_SITE_URL:-https://prep.puttski.com}
-      DISALLOW_ROBOTS: ${DISALLOW_ROBOTS:-1}
+      NEXT_PUBLIC_SITE_URL: https://prep.puttski.com
+      DISALLOW_ROBOTS: "1"
     # Publish port 3000 to host so an existing Cloudflare tunnel
     # can route to http://localhost:3000 (or host IP:3000)
     ports:
