--- a/docker-compose.prep.yml
+++ b/docker-compose.prep.yml
@@ -8,6 +8,7 @@ services:
     environment:
       NODE_ENV: production
       NEXT_PUBLIC_SITE_URL: https://prep.puttski.com
+      SITE_URL: https://prep.puttski.com
       DISALLOW_ROBOTS: "1"
     # Publish port 3000 to host so an existing Cloudflare tunnel
     # can route to http://localhost:3000 (or host IP:3000)
