--- a/docker-compose.prep.yml
+++ b/docker-compose.prep.yml
@@ -6,10 +6,10 @@ services:
     pull_policy: always
     restart: unless-stopped
     environment:
-      NODE_ENV: production
-      NEXT_PUBLIC_SITE_URL: https://prep.puttski.com
-      SITE_URL: https://prep.puttski.com
-      DISALLOW_ROBOTS: "1"
+      NODE_ENV: ${NODE_ENV}
+      NEXT_PUBLIC_SITE_URL: ${NEXT_PUBLIC_SITE_URL}
+      SITE_URL: ${SITE_URL}
+      DISALLOW_ROBOTS: ${DISALLOW_ROBOTS}
     # Publish port 3000 to host so an existing Cloudflare tunnel
     # can route to http://localhost:3000 (or host IP:3000)
     ports:
